Non-unique id error message. Restricting temp users access

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -28,12 +28,7 @@
         </div>
         
     
-    <script type="text/javascript" data-no_users="{{no_users}}" data-valid_info="{{valid_info}}" src="{% static '/scripts/index.js' %}">
-    </script>
-    <script type="text/javascript"> 
-        no_users = {{no_users}};
-        valid_info = {{valid_info}};
-        init(no_users,valid_info);
+    <script type="text/javascript" data-valid_info="{{valid_info}}" src="{% static '/scripts/index.js' %}">
     </script>
     </body>
 </html>
