--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -19,7 +19,7 @@
                     <li><a>ID: {{employee_id}}</a></li>
                 </ul>
             </div>
-            <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
+            <button id="logout_button" type="button" name="logout_click"  onclick="logout_click()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
         </nav>
     
