employee id rather than username

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -11,7 +11,7 @@
             <h1>Login</h1>
             <div class="textbox">
                 <i class="fa fa-user-secret" aria-hidden="true"></i>
-                <input type="text" id="employee_id" placeholder="Username" name="employee_id" value="" required>
+                <input type="text" id="employee_id" placeholder="Employee ID" name="employee_id" value="" required>
             </div>
             <div id="id_error" style="display: none" class="error_msg">Error: Username must be numerical</div>
             
