--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -21,6 +21,14 @@
             </div>
             <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
+        <div>
+            <p>{{item_id}}</p>
+            <p>{{item_name}}</p>
+            <p>${{item_price}}</p>
+            <p>{{item_description}}</p>
+            <img src="{{photo}}">
+
+        </div>
         </nav>
    </body>
 </html>
