static employee id on creation

--- a/menu/templates/employeeDetail.html
+++ b/menu/templates/employeeDetail.html
@@ -39,7 +39,7 @@
 			<div id="lname_alpha" style="display: none" class="error_msg">Error: Last name must only contain alphabetical letters</div>
             <div class="textbox">
                 <i class="fa fa-id-card-o" aria-hidden="true"></i>
-                <input type="text" placeholder="Employee ID" id="cemployee_id"  name="employee_id" value={{employee_id}} required>
+                <input type="text" placeholder="Employee ID" id="cemployee_id"  name="employee_id" value={{employee_id}} style="pointer-events: none" required>
             </div>
             <div id="uid_error" style="display: none" class="error_msg">Error: Employee ID must be 5 digits and not blank</div>
             <div id="cid_error" style="display: none" class="error_msg">Error: Employee ID must be 5 digits</div>
