fixing create user bug

--- a/menu/templates/employeeDetail.html
+++ b/menu/templates/employeeDetail.html
@@ -46,7 +46,7 @@
             <div class="textbox">
                 <i class="fa fa-street-view" aria-hidden="true"></i>
 <!--                <input type="text" placeholder="Role" id="crole" name="role" value="" required>-->
-                <select class="role_select" name="role">
+                <select class="role_select" name="role" id=crole>
                     <option value="GM">General Manager</option>
                     <option value="SM">Store Manager</option>
                     <option value="CS">Cashier</option>
