--- a/menu/templates/productDetail.html
+++ b/menu/templates/productDetail.html
@@ -2,18 +2,15 @@
 <html>
  {% load static %}
     <head>
-        <title>Product Listing</title>
+        <title>Product Detail</title>
     </head>
     	<link rel="stylesheet" href="{% static '/css/menu.css' %}">
 
 		<script type="text/javascript" src="{% static 'scripts/master.js' %}" defer></script>
-        <script type="text/javascript" src="{% static 'scripts/ProductListing.js' %}" defer></script>
 		
     <body>
-        <h1 id="tmp">Product Listing</h1>
-        <div >
-            <button id="createNewButton" class="button">Create New</button>
-        </div>
+        <h1 id="tmp">Product Detail</h1>
+    
         <nav>
         <div class="info">
             <div class="account">
@@ -25,15 +22,7 @@
             </div>
             <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
-        <div>
-            <p>{{item_id}}</p>
-            <p>{{item_name}}</p>
-            <p>${{item_price}}</p>
-            <p>{{item_description}}</p>
-            <img src="{{photo}}">
-
-        </div>
+       
         </nav>
-
    </body>
 </html>
