--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -29,6 +29,11 @@
             </div>
             <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
+
+        <div >
+            <button id="createNewButton" class="button">Create New</button>
+        </div>
+
 <!--
         <div>
             <p>{{item_id}}</p>
