--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="{% static 'scripts/ProductListing.js' %}" defer></script>
 		
     <body>
+        <h1 id="tmp">Product Listing</h1>
 
         <nav>
         <div class="info">
