--- a/static/css/product_listing.css
+++ b/static/css/product_listing.css
@@ -110,6 +110,18 @@ body {
     cursor: pointer;
 }
 
+.button{
+    display: inline-block;
+    position: relative;
+    font-size: 20px;
+    margin-left: 45%;
+    margin-right: 40%: 
+    width: 20%;
+    height: 50px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 
 
 
