--- a/menu/templates/createProduct.html
+++ b/menu/templates/createProduct.html
@@ -21,7 +21,7 @@
                 <input class="Box-Input" type="text" id="qavail"/>
                 <div class="File-Container">
                     <p for="img" class="Box-Head">Select image: </label>
-                    <input type="file" id="img" name="img" accept="image/*">
+                    <input type="file" id="img"  accept=".jpg, .jpeg, .png">
                 </div>
                 <div class="Button-Container">
                     <button class="button" name="create_product" onclick="validateCreateProduct()">Submit</button>
