--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -15,7 +15,7 @@
             <div class="search-box">
                 <input class="search-text" type="text" name="" placeholder="Product to Search">
                 <a class="search-btn" href="#">
-<!--                    <i class="fa fa-search" aria-hidden="true"></i>-->
+                    <i class="fa fa-search" aria-hidden="true"></i>
                     <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
                 </a>
             </div>
@@ -28,16 +28,14 @@
             </div>
             <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
-<!--
         <div>
             <p>{{item_id}}</p>
             <p>{{item_name}}</p>
             <p>${{item_price}}</p>
             <p>{{item_description}}</p>
-            <img src="{{photo}}">
+            <img src="../{{photo}}">
 
         </div>
--->
         </nav>
    </body>
 </html>
