--- a/static/css/createProduct.css
+++ b/static/css/createProduct.css
@@ -11,7 +11,9 @@ body {
 .Form-Container{
     display: flex;
     width:100%;
-    height: 100vh;
+    margin-top:-5%;
+    height: 80vh;
+    min-height:70rem;
     justify-content: center;
     align-items: center;
 
@@ -23,19 +25,19 @@ body {
 .Form {
     width: 50%;
     height:60%;
+    min-height:50rem;
     border: 3px grey solid;
+    padding:1%;
 }
 
 .Box-Head{
     font-size: 1.5rem;
-    padding-left: 1%;
     padding-top: 3%;
 }
 
 .Box-Input {
     width: 98%;
     height: 2.5vh;
-    margin-left: 1%;
     margin-top: .3rem;
 }
 
@@ -55,12 +57,17 @@ body {
     border: 0;
     border-radius: 10px;
     width: 15%;
+    min-width:6rem;
     position: relative;
-    margin-left: 42.5%;
+    margin-left: 40.5%;
 }
 
 .Button-Container{
     width: 100%;
+}
+
+.error {
+    font-size: 1rem;
 }
 
 
