--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -38,7 +38,7 @@
             <p>{{item_name}}</p>
             <p>{{item_price}}</p>
             <p>{{item_description}}</p>
-            <img src="../{{photo}}">
+            <img src="{{photo}}">
 
         </div>
         </nav>
