--- a/static/css/createProduct.css
+++ b/static/css/createProduct.css
@@ -7,6 +7,27 @@
 body {
     background-color: bisque;
 }
+.heading{
+    margin-left:170px;
+
+}
+
+.sidenav {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: grey; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
+.side-item{
+    width:160px;
+    height:30px;
+
+}
 
 .Form-Container{
     display: flex;
