Cashier cannot create product

--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -30,8 +30,10 @@
             </div>
             <button id="logout_button" type="submit" name="logout_click" ><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </div>
-        <div >
-            <button id="createNewButton" class="button">Create New</button>
+    </nav>
+    
+        <div class="createbutton">
+            <button id="createNewButton" class="{{role}}button" >Create New</button>
         </div>
 
         <div>
@@ -42,7 +44,7 @@
             <img src="{{photo}}">
 
         </div>
-        </nav>
+       
 
    </body>
 </html>
