--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -36,19 +36,23 @@
             <button id="createNewButton" class="{{role}}button" >Create New</button>
         </div>
         <div class="Card-Container">
+        {% for product in products %}
         <div class="Item-Card">
             <div class="Card-Header">
-                <p>{{item_name}}</p>
+                <p>{{product.1}}</p>
             </div>
             <div class="Card-Description">
-                <p>Description: {{item_description}}</p>
+                <p>Description: {{product.3}}</p>
             </div>
             <div class="Card-Footer">
-                <p>ID#: {{item_id}}</p>
-                <p>Price: ${{item_price}} </p>
+                <p>ID#: {{product.0}}</p>
+                <p>Q: {{product.4}}</p>
+                <p>Price: ${{product.2}} </p>
             </div>
 
         </div>
+        {% endfor %}
+
         </div>
        
 
