--- a/static/css/product_listing.css
+++ b/static/css/product_listing.css
@@ -148,7 +148,7 @@ body {
 
 .CSbutton {
     visibility: hidden;
-    display: inline-block;
+    display: none;
     position: relative;
     font-size: 20px;
     margin-left: 45%;
@@ -166,6 +166,7 @@ body {
     min-width:300px;
     min-height:150px;
     max-height 200px;
+    cursor: pointer;
     display: flex;
     padding-left:1rem;
     padding-right:1rem;
