--- a/menu/templates/productListing.html
+++ b/menu/templates/productListing.html
@@ -12,8 +12,8 @@
         </script>
 		
     <body>
-        <h1 id="tmp">Product Listing</h1>
-
+<!--        <h1 id="tmp">Product Listing</h1>-->
+        <button class="backButton" onclick="back()"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
         <nav>
         <div class="info">
             <div class="search-box">
