--- a/static/css/createProduct.css
+++ b/static/css/createProduct.css
@@ -96,4 +96,17 @@ body {
     font-size: .7rem !important;
 }
 
-
+.backButton{
+    font-family: Hack, monospace;
+    background: #d3d3d3;
+    color: #2c2c2c;
+    cursor: pointer;
+    font-size: 30px;
+    border: 0;
+    border-radius: 10px;
+    width: 40px;
+    height 40px;
+    position: fixed;
+    left: 180px;
+    top: 20px;
+}
