--- a/static/css/product_listing.css
+++ b/static/css/product_listing.css
@@ -206,7 +206,20 @@ body {
 
 }
 
-
+.backButton{
+    font-family: Hack, monospace;
+    background: #d3d3d3;
+    color: #2c2c2c;
+    cursor: pointer;
+    font-size: 30px;
+    border: 0;
+    border-radius: 10px;
+    width: 40px;
+    height 40px;
+    position: fixed;
+    left: 20px;
+    top: 20px;
+}
 
 
 
